--- a/src/web/public/pmaker.css
+++ b/src/web/public/pmaker.css
@@ -6,7 +6,8 @@
     overflow: hidden;
 }
 
-#password-maker-form label,.form-control-wrapper {
+#password-maker-form label,
+.form-control-wrapper {
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -21,7 +22,7 @@
     cursor: auto;
 }
 
-@media ( min-width : 768px) {
+@media (min-width: 768px) {
     #password-maker-form label {
         width: 160px;
     }
